<resources>
    <string name="app_name">Home Perfect</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_wishList">WishList</string>
    <string name="menu_myBooking">My Booking</string>
    <string name="menu_aboutUS">About US</string>
    <string name="menu_termsConditions">Terms &amp; Conditions</string>
    <string name="continueBtn">Continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="home">Home</string>
    <string name="level">Level</string>
    <string name="personal_info">Personal Info</string>
    <string name="age">Age</string>
    <string name="languages">Languages</string>
    <string name="classroom">Classroom</string>
    <string name="works_hours">Works Hours</string>
    <string name="what_people_say">What People Say</string>
    <string name="recent_providers">Recent Providers</string>
    <string name="top_providers">Top Providers</string>
    <string name="services">Services</string>
    <string name="online_providers">Online Providers</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="date_time">DATE TIME</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="additions">Additions</string>
    <string name="price">Price:</string>
    <string name="total_price">Total Price:</string>
    <string name="bill">Bill</string>
    <string name="get_code">Get code</string>
    <string name="phone_number">Phone Number....</string>
    <string name="emulator">Emulator</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="book">Book</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="login">Login</string>
    <string name="signIn">SignIn</string>
    <string name="input_user_data">Input User Data</string>
    <string name="save">Save</string>
    <string name="user_name_hint">User Name....</string>
    <string name="user_name">User Name</string>
    <string name="booking_provider">Booking provider</string>
    <string name="accepted">Accepted</string>
    <string name="waiting">Waiting</string>
    <string name="in_progress">In Progress</string>
    <string name="done">Done</string>
    <string name="rating">Rating</string>
    <string name="canceled">Canceled</string>
    <string name="provider_image">Provider Image</string>
    <string name="more">More</string>
    <string name="update_user_name_des">Your name makes it easy to Providers to confirm who they\'s booking</string>
    <string name="email_address">Email Address</string>
    <string name="update_user_email_des">Receive info about new update and awesome promos in your inbox</string>
    <string name="update_user_address_des">Your address makes it easy to Providers to confirm book location</string>
    <string name="your_gender">Your Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="no_providers_in_service">"No Providers in "</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="choosePImg">Choose Personal Image</string>
    <string name="please_select_img">please Select you Image !</string>
    <string name="img_not_found">Image Not Founded</string>
    <string name="set_img_Profile">Set Profile Image</string>
    <string name="please_waite">Please wait</string>
    <string name="choose">Choose</string>
    <string name="booking">Booking</string>
    <string name="your_request">"Your Request is"</string>
    <string name="please_rate_this_provider">Please rate this provider</string>
    <string name="submit">Submit</string>
    <string name="please_rate">please_rate</string>
    <string name="enter_code">Enter Code:</string>


</resources>
