<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="0dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/input_user_data"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/fullDialogClose"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Page Title" />

                <ImageButton
                    android:id="@+id/fullDialogClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:cropToPadding="false"
                    android:padding="8dp"
                    android:src="@drawable/ic_close_black_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btnBookingDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:padding="8dp"
                    android:text="@string/save"
                    android:textColor="#FFFFFF"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUserImage"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_circle_image"
            android:elevation="15dp"
            android:src="@drawable/ic_person_black_24dp"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgUserImage"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUserNameDialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/user_name_hint"
                android:paddingStart="16dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>