<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        android:backgroundTint="#80000000"
        android:backgroundTintMode="src_over"
        tools:context=".ui.LoginActivity"
        android:clipToPadding="false"
        android:fitsSystemWindows="true">

        <Button
            android:id="@+id/btnConLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/btn_main_background"
            android:text="@string/get_code"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent" />

        <com.raycoarana.codeinputview.CodeInputView
            android:id="@+id/codeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="183dp"
            android:background="@color/backgroundColor"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/phoneLayoutLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/phoneLayoutLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_card_ccp"
            app:layout_constraintBottom_toTopOf="@+id/btnConLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPhoneLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@null"
                android:hint="@string/phone_number"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toEndOf="@+id/ccpLogin"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="59708097" />

            <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                android:id="@+id/ccpLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:ccp_enablePhoneAutoFormatter="true"
                app:ccp_hideNameCode="true"
                app:ccp_hidePhoneCode="true"
                app:ccp_keyboardAutoPopOnSearch="false"
                app:ccp_showFullName="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edtPhoneLogin"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:onClick="showLoginDialog"
            android:text="@string/emulator"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>