<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBarBookingActivity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgbtnCloseToolBarBookingActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_close_black_24dp" />

                <ImageView
                    android:id="@+id/imgbtnBackToolBarBookingActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvTitleToolBarBookingActivity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/booking_provider"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvNextToolBarBookingActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvBookToolBarBookingActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:text="@string/book"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </RelativeLayout>
        </com.google.android.material.appbar.MaterialToolbar>

        <com.kofigyan.stateprogressbar.StateProgressBar
            android:id="@+id/stateProgressBarBooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolBarBookingActivity"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="32dp"
            android:foregroundGravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBarBookingActivity"
            app:spb_animateToCurrentProgressState="true"
            app:spb_currentStateNumber="one"
            app:spb_maxStateNumber="three"
            app:spb_stateForegroundColor="@color/colorPrimaryDark"
            app:spb_stateNumberBackgroundColor="@android:color/white"
            app:spb_stateNumberForegroundColor="@android:color/white"
            app:spb_animationDuration="600"
            app:spb_checkStateCompleted="true"
            app:spb_currentStateDescriptionColor="@color/colorPrimaryDark"
            app:spb_descriptionLinesSpacing="2dp"
            app:spb_animationStartDelay="300" />


        <FrameLayout
            android:id="@+id/contentOfBookingSteps"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@id/stateProgressBarBooking"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stateProgressBarBooking" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>